Adding web.config to deploy to Azure

--- a/angular.json
+++ b/angular.json
@@ -19,7 +19,8 @@
             "assets": [
               "src/assets",
               "src/favicon.ico",
-              "src/manifest.json"
+              "src/manifest.json",
+              "src/web.config"
             ],
             "styles": [
               "src/styles.scss",
